--- a/index.html
+++ b/index.html
@@ -64,10 +64,26 @@
   			<div class="card-body">
   				<i class="fas fa-code"></i>
     			<h4 class="card-title">E-COMMERCE SITE</h4>
-    			<p class="card-text">Coming soon</p>
-    			<a href="#" class="card-link"></a>
+    			<p class="card-text">An web-app that uses django.</p>
+    			<a href="https://github.com/Haxor44/E-commerce" class="card-link">E-COMMERCE</a>
   			</div>
 		</div>
+        <div class="card">
+            <div class="card-body">
+                <i class="fas fa-code"></i>
+                <h4 class="card-title">IOT based system</h4>
+                <p class="card-text">An IOT system that uses php and c++</p>
+                <a href="https://github.com/Haxor44/IOTapp" class="card-link">IOT</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <i class="fas fa-code"></i>
+                <h4 class="card-title">Project Management  system</h4>
+                <p class="card-text">Technologies used HTML,CSS,JAVASCRIPT & (FIREBASE).</p>
+                <a href="https://github.com/Haxor44/Project-Manager-App" class="card-link">Project</a>
+            </div>
+        </div>
 	</div>
 	</div>
     </section>
@@ -103,15 +119,15 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>C++</span>
+                            <span>C&C++</span>
                             <span>80%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>C</span>
-                            <span>75%</span>
+                            <span>Golang</span>
+                            <span>60%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
